crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_after_equals_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x =\n    5\n\n42\n\n"
---
(BeginTopLevelDecls
    (BeginAssign
        Ident=>LowerIdent@0
        InlineAssign=>OpAssign@1
        (BeginBlock HintExpr Num=>IntBase10@3 EndBlock)
    EndAssign)
    HintExpr
    Num=>IntBase10@5
EndTopLevelDecls)

[=== canfmt below ===]
Assign("x", Block([IntBase10("5")]))
IntBase10("42")

[=== formatted below ===]

