crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_after_mul_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "3  *\n  4\n"
---
(BeginFile
    (BeginTopLevelDecls
        (* HintExpr Num=>Int@0 InlineBinOpStar=>OpStar@1 Num=>Int@2 EndBinOpStar)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("3"), Star, IntBase10("4"))

[=== formatted below ===]

