crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_after_mul_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "3\n*\n4\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        Num=>IntBase10@0
        InlineBinOpStar=>OpStar@1
        Num=>IntBase10@2
    EndBinOpStar)
EndTopLevelDecls)

[=== canfmt below ===]
BinOp(IntBase10("3"), Star, IntBase10("4"))

[=== formatted below ===]

