crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_after_paren_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(\nA)\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginParens UpperIdent=>UpperIdent@1 EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UpperIdent("A")

[=== formatted below ===]

