crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_after_paren_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "A\n"
---
(BeginTopLevelDecls HintExpr UpperIdent=>UpperIdent@0 EndTopLevelDecls)

[=== canfmt below ===]
UpperIdent("A")

[=== formatted below ===]

