crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_after_sub_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "3  -\n  4\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Num=>IntBase10@0
            InlineBinOpMinus=>OpBinaryMinus@1
            Num=>IntBase10@2
        EndBinOpMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("3"), Minus, IntBase10("4"))

[=== formatted below ===]

