crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_and_spaces_before_less_than_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x = 1\n    < 2\n\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (* Num=>Int@2 InlineBinOpLessThan=>OpLessThan@3 Num=>Int@4 EndBinOpLessThan)
        EndAssign)
        HintExpr
        Num=>Int@5
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), BinOp(IntBase10("1"), LessThan, IntBase10("2")))
IntBase10("42")

[=== formatted below ===]

