crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_and_spaces_before_less_than_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "x =\n    1\n    < 2\n\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginBlock
                (*
                    HintExpr
                    Num=>IntBase10@2
                    InlineBinOpLessThan=>OpLessThan@3
                    Num=>IntBase10@4
                EndBinOpLessThan)
            EndBlock)
        EndAssign)
        HintExpr
        Num=>IntBase10@5
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), Block([BinOp(IntBase10("1"), LessThan, IntBase10("2"))]))
IntBase10("42")

[=== formatted below ===]

