crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__newline_before_add_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "3\n+ 4\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        Num=>IntBase10@0
        InlineBinOpPlus=>OpPlus@2
        Num=>IntBase10@3
    EndBinOpPlus)
EndTopLevelDecls)

[=== canfmt below ===]
BinOp(IntBase10("3"), Plus, IntBase10("4"))

[=== formatted below ===]

